# weread-vault

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/sample-data/: sample-books.json  weread-vault-sample.sql
packaging/: launch.py  windows.iss
scripts/: create-sample-db.py  generate-sample-doc-assets.py  sample_data.py  update-official-skill.sh
skills/weread-recommend/: SKILL.md
skills/weread-vault-cli/: SKILL.md
src/weread_vault/: __init__.py  cli.py  config.py  db.py  errors.py  export.py  gateway.py  integrations.py  schedule.py  sync.py  sync_lock.py  web.py
tests/: test_cli.py  test_db.py  test_export.py  test_gateway.py  test_integrations.py  test_schedule.py  test_sync.py  test_sync_lock.py  test_web.py
web-articles/404/: 404.md
web-articles/500/: 500.md
web-articles/Mac_使用教程/: Mac_使用教程.md
web-articles/用户中心/: 用户中心.md
web-articles/节点列表/: 节点列表.md
